--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10649,46 +10649,9 @@ body {
   background-size: cover;
 }
 
-.card {
-  background-color: rgba(255, 255, 255, 0.8);
-}
-
-.card-header {
-  font-size: 1em;
-  font-weight: bold;
-  color: #039999;
-  background-color: rgba(255, 255, 255, 0.85);
-}
-
-.btn-primary {
-  background-color: #039999;
-}
-
-.btn-primary:hover {
-  background-color: rgba(0, 153, 153, 0.8);
-}
-
-.page-item.active .page-link {
-  color: #fff !important;
-  background-color: #039999 !important;
-  border-color: #039999 !important;
-}
-
-.page-link {
-  color: #039999 !important;
-}
-
-.fas {
-  color: #039999 !important;
-}
-
-.card a {
-  color: #039999 !important;
-}
-
-.card a:hover {
-  text-decoration: none !important;
-  letter-spacing: 0.03em;
+input,
+textarea {
+  background-color: rgba(255, 255, 255, 0.8) !important;
 }
 
 .alert.alert-success {
@@ -10708,13 +10671,57 @@ body {
   letter-spacing: 0.03em;
 }
 
+.card {
+  background-color: rgba(255, 255, 255, 0.8);
+}
+
+.card-header {
+  font-size: 1em;
+  font-weight: bold;
+  color: #039999;
+  background-color: rgba(255, 255, 255, 0.85);
+}
+
+.card a {
+  color: #039999 !important;
+}
+
+.card a:hover {
+  text-decoration: none;
+  letter-spacing: 0.03em;
+}
+
 .modal-footer button {
   width: 75px !important;
 }
 
-input,
-textarea {
-  background-color: rgba(255, 255, 255, 0.8) !important;
+a.btn {
+  color: #fff !important;
+  letter-spacing: 0em !important;
+}
+
+.btn-primary {
+  color: #fff;
+  background-color: #039999;
+}
+
+.btn-primary:hover {
+  color: #fff;
+  background-color: rgba(0, 153, 153, 0.8);
+}
+
+.page-item.active .page-link {
+  color: #fff !important;
+  background-color: #039999 !important;
+  border-color: #039999 !important;
+}
+
+.page-link {
+  color: #039999 !important;
+}
+
+.fas {
+  color: #039999 !important;
 }
 
 /* Input Placeholder Styles ------------------------------------------------- */
